# layered-sqt

./: CMakeLists.txt  Doxyfile  README.md  Rakefile  RawSQT-Plot.py  example.layers
docs/: _config.yml  index.md
docs/_includes/: copy.html
docs/doxygen/html/: annotated.html  classAssembly-members.html  classAssembly.html  classDielectricLayer-members.html  classDielectricLayer.html  classDielectricLayer__inherit__graph.map  classDielectricLayer__inherit__graph.md5  classHit-members.html  classHit.html  classLambertianLayer-members.html  classLambertianLayer.html  classLambertianLayer__inherit__graph.map  classLambertianLayer__inherit__graph.md5  classLayer-members.html  classLayer.html  classLayer__inherit__graph.map  classLayer__inherit__graph.md5  classMedium-members.html  classMedium.html  classRay-members.html  classRay.html  classes.html  classls_1_1FileData-members.html  classls_1_1FileData.html  classls_1_1HenyeyGreenstein2Medium-members.html  classls_1_1HenyeyGreenstein2Medium.html  classls_1_1HenyeyGreenstein2Medium__inherit__graph.map  classls_1_1HenyeyGreenstein2Medium__inherit__graph.md5  classls_1_1HenyeyGreensteinMedium-members.html  classls_1_1HenyeyGreensteinMedium.html  classls_1_1HenyeyGreensteinMedium__inherit__graph.map  classls_1_1HenyeyGreensteinMedium__inherit__graph.md5  classls_1_1HenyeyGreensteinPhaseMedium-members.html  classls_1_1HenyeyGreensteinPhaseMedium.html  classls_1_1HenyeyGreensteinPhaseMedium__inherit__graph.map  classls_1_1HenyeyGreensteinPhaseMedium__inherit__graph.md5  classls_1_1Hit-members.html  classls_1_1Hit.html  classls_1_1LambertianBsdfLayer-members.html  classls_1_1LambertianBsdfLayer.html  (+167 more)
docs/pdf/: Layered-SQT.aux  Layered-SQT.bbl  Layered-SQT.bcf  Layered-SQT.blg  Layered-SQT.out  Layered-SQT.run.xml  Layered-SQT.tex  Makefile  References.bib
docs/pdf/Fig-layers/: Fig-layers.tex
include/layered-sqt/: common.hpp  file_data.hpp  layer.hpp  layered_assembly.hpp  medium.hpp  progress_bar.hpp  rrss.hpp  tri.hpp
include/layered-sqt/layer/: dielectric_microsurface.hpp  lambertian.hpp  microsurface_conductive.hpp  microsurface_dielectric.hpp  microsurface_lambertian.hpp  null.hpp  oren_nayar_diffuse.hpp
include/layered-sqt/medium/: henyey_greenstein.hpp  henyey_greenstein2.hpp  rayleigh.hpp  sggx.hpp
src/: file_data.cpp  layer.cpp  layered_assembly.cpp  lssinfo.cpp  lssview.cpp  main.cpp  main_lssinfo.cpp  main_lssview.cpp  medium.cpp  progress_bar.cpp  rrss.cpp  stb_image_write.h  tri.cpp
src/layer/: dielectric_microsurface.cpp  lambertian.cpp  microsurface_conductive.cpp  microsurface_dielectric.cpp  microsurface_lambertian.cpp  null.cpp  oren_nayar_diffuse.cpp
src/medium/: henyey_greenstein.cpp  henyey_greenstein2.cpp  rayleigh.cpp  sggx.cpp
tests/: has_filesystem.cpp
